Estilizando Mongo Charts

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -17,9 +17,13 @@
 </head>
 
 <body class="align-items-center py-4 bg-body-tertiary">
-
-    <iframe style="background: #21313C;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);" width="640" height="480" src="https://charts.mongodb.com/charts-project-0-fjhioft/embed/charts?id=cbde66d2-c8b1-48cb-aa4f-4c003ba6eae6&maxDataAge=60&theme=dark&autoRefresh=true">       
-    </iframe>
+    <nav class="navbar navbar-dark bg-primary" id="nav">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="./graph.html">Gráficos<span class="sr-only">(Página atual)</span></a>
+            </li>
+          </ul>
+    </nav>
 
     <main>
         <div class="formulario">
