--- a/src/view/styles.css
+++ b/src/view/styles.css
@@ -1,12 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
-html {
-    height: 100%;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+#nav {
+    position:fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 1;
 }
 
 body {
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
     font-family: "Montserrat", sans-serif;
+}
+
+iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 #map {
@@ -16,6 +30,7 @@ body {
     -webkit-box-shadow: 11px 11px 50px -19px rgba(0,0,0,0.36);
     -moz-box-shadow: 11px 11px 50px -19px rgba(0,0,0,0.36);
     box-shadow: 11px 11px 50px -19px rgba(0,0,0,0.36);
+    z-index: 0;
 }
 
 .btn {
@@ -101,6 +116,19 @@ body {
 	max-width: 100%;
 }
 
+.nav-link {
+    margin-left: 20px;
+    font-weight: 400;
+    color: #ffff;
+    transition: 300ms;
+}
+
+.nav-link:hover {
+    transition: 300ms;
+    font-size: 20px;
+    padding-top: 20px;
+}
+
 .input {
 	font-size: 18px;
 	padding: 5px 10px;
@@ -144,7 +172,7 @@ body {
 .pesquisar {
     display: flex;
     flex-direction: row; 
-    align-items:center;
+    align-items:last baseline;
     justify-content: center; 
     gap: 10px; 
     margin-top: 20px;
@@ -176,7 +204,6 @@ body {
 
   .tabela {
     width: 100%;
-    height: 100%;
     border-collapse: collapse;
     margin-top: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -186,6 +213,7 @@ body {
 .tabela-cabecalho {
     background-color: #5141B8;
     width: 100%;
+    height: 100%;
     color: white;
     text-align: left;
 }
@@ -194,7 +222,6 @@ body {
     padding: 12px 15px;
 }
 
-/* Estilo para o corpo da tabela */
 .tabela tbody tr:nth-child(even) {
     background-color: #f2f2f2; 
 }
@@ -249,4 +276,4 @@ body {
   }
   ::-webkit-scrollbar-corner {
     background: transparent;
-  }
+  } 
