Corrigindo metodo de atualizar hotel

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -47,7 +47,7 @@
     <div class="pesquisar">
         <div class="inputLabel">
             <label for="cnpjHotel">Buscar hotel</label>
-            <input type="text" class="inputSearch" placeholder="Digite o CNPJ do hotel" id="pesquisar">
+            <input type="text" class="inputSearch" placeholder="Pesquisa por texto" id="pesquisar">
         </div>
         <button type="button" class="btn-enviar" id="buttonPesquisar">
             <i class="fas fa-search search-icon"></i> Buscar
