--- a/src/view/styles.css
+++ b/src/view/styles.css
@@ -15,6 +15,9 @@
 body {
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
     font-family: "Montserrat", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 iframe {
