Adicioando campo classificação ao hotel

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -37,6 +37,10 @@
 
                 <label for="cnpj">CNPJ</label>
                 <input type="text" class="input" placeholder="Digite o CNPJ" id="cnpj">
+                
+                <label for="tipo">Classificação</label>
+                <input type="text" class="input"  placeholder="Digite o tipo do hotel" id="tipo">
+                
 
                 <button type="button" class="btn" id="button">Enviar</button>
             </section>
@@ -60,6 +64,7 @@
                 <th>Id</th>
                 <th>Nome do Hotel</th>
                 <th>CNPJ</th>
+                <th>Classificação</th>
                 <th>Latitude</th>
                 <th>Longitude</th>
             </tr>
