--- a/src/view/map.html
+++ b/src/view/map.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="./icons/favicon.png" type="image/x-icon">
-    <title>Graph</title>
+    <title>Map</title>
 </head>
 <body>
         <nav class="navbar navbar-dark bg-primary">
@@ -17,7 +17,7 @@
           </ul>
         </nav>
 
-        <iframe style="background: #21313C;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);" width="640" height="480" src="https://charts.mongodb.com/charts-project-0-fjhioft/embed/charts?id=9a33b053-41cb-4a2a-80fc-e3d12c746eb1&maxDataAge=3600&theme=dark&autoRefresh=true">
-        </iframe>
+    <iframe style="background: #21313C;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);" width="640" height="480" src="https://charts.mongodb.com/charts-project-0-fjhioft/embed/charts?id=cbde66d2-c8b1-48cb-aa4f-4c003ba6eae6&maxDataAge=60&theme=dark&autoRefresh=true">       
+    </iframe>
 </body>
 </html>
