Finalizando ajuste na busca full-search no front

--- a/src/view/index.html
+++ b/src/view/index.html
@@ -25,7 +25,13 @@
 
             <li class="nav-item active">
                 <a class="nav-link" href="graph.html">Gráfico<span class="sr-only">(Página atual)</span></a>
-              </li>
+            </li>
+
+            <li class="nav-item active"></li>
+                <a class="nav-link" href="HeatMap.html">Mapa de calor<span class="sr-only">(Página atual)</span></a>
+            </li>
+
+              
           </ul>
     </nav>
 
