--- a/src/view/styles.css
+++ b/src/view/styles.css
@@ -12,8 +12,28 @@
     z-index: 1;
 }
 
+.navBar {
+    display: flex;
+    padding-left: 20px;
+    position: fixed;
+}
+
+.navBar a {
+    text-decoration: none;
+    color: #ebaf17;
+    transition: 300ms;
+}
+
+.navBar a:hover {
+    font-size: 20px;
+    transition: 300ms;
+}
+
 body {
-    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+    background-image: url(./images/bg.png);
+    background-size: cover; /* Faz a imagem cobrir toda a tela */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita que a imagem se repita */
     font-family: "Montserrat", sans-serif;
     margin: 0;
     padding: 0;
@@ -43,44 +63,54 @@ iframe {
 }
 
 .btn {
-  line-height: 1;
-  text-decoration: none;
-  color: #333333;
-  font-size: 18px;
-  border-radius: 5px;
-  width: 80px;
-  height: 40px;
-  border: 1px solid #333333;
-  margin: 10px;
-  position: relative;
-  transition: 0.3s;
-  background-color: #ffffff00;
+    line-height: 1;
+    text-decoration: none;
+    color: #ebaf17;
+    font-size: 18px;
+    border-radius: 5px;
+    width: 80px;
+    height: 40px;
+    border: 1px solid #ebaf17;
+    margin: 10px;
+    position: relative;
+    background-color: transparent; 
+    transition: 300ms;
+}
+
+.btn:hover {
+    color: #ebaf17;
+    transition: 300ms;
 }
 
 .btn::before, .btn::after {
-    content: "";
-    display: block;
     position: absolute;
     top: 50%;
     right: 15px;
-    transform-origin: 100% 50%;
     height: 1px;
-    width: 11px;
-    background-color: #333;
-    border-radius: 2px;
-    will-change: transform;
-    transition: .3s;
+    width: 15px;
+    background-color: #ffb700; 
+    border: 1px solid #ebaf17;
+    border-radius: 2px; 
+    transition: none; 
 }
+
+
+.btn:hover::before,
+.btn:hover::after {
+    background-color: #ffb700; 
+}
+
+  
 
 .btn-enviar {
     line-height: 1;
     text-decoration: none;
-    color: #333333;
+    color: #ebaf17;
     font-size: 18px;
     border-radius: 5px;
     width: 100px;
     height: 40px; 
-    border: 1px solid #333333;
+    border: 1px solid #ebaf17;
     margin: 10px;
     position: relative;
     transition: 0.3s;
@@ -164,7 +194,6 @@ iframe {
 	color: #000000;
 	border: 1px solid #C4D1EB;
 	border-radius: 5px;
-	box-shadow: 3px 3px 2px 0px #E2E2E2;
 	transition: .3s ease;
 }
 
@@ -215,15 +244,13 @@ iframe {
     width: 100%;
     border-collapse: collapse;
     margin-top: 20px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 
 .tabela-cabecalho {
-    /* background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%); */
     width: 100%;
     height: 100%;
-    color:#0D6EFD;
+    color:#ebaf17;
     text-align: left;
 }
 
@@ -235,17 +262,9 @@ iframe {
     background-color: #f2f2f2; 
 }
 
-.tabela tbody tr:hover {
-    background-color: #ddd;
-}
-
 .tabela td {
     padding: 12px 15px;
-    border-bottom: 1px solid #ddd;
-}
-
-.tabela td:first-child {
-    text-align: center;
+    color: #ebaf17;
 }
 
 #icon-edit-hotel img {
@@ -253,7 +272,7 @@ iframe {
 }
 
 .buttonEdit {
-    border: none;
+    border-radius: 50px;
 }
 
 .buttonDelete {
