--- a/src/view/index.html
+++ b/src/view/index.html
@@ -58,7 +58,7 @@
 
     <div class="pesquisar">
         <div class="inputLabel">
-            <label for="cnpjHotel">Buscar hotel</label>
+            <label for="cnpjHotel" class="labelBusca">Buscar hotel</label>
             <input type="text" class="inputSearch" placeholder="Pesquisa por texto" id="pesquisar">
         </div>
         <button type="button" class="btn-enviar" id="buttonPesquisar">
