--- a/src/view/index.html
+++ b/src/view/index.html
@@ -48,7 +48,7 @@
                 <input type="text" class="input" placeholder="Digite o CNPJ" id="cnpj">
                 
                 <label for="tipo">Classificação</label>
-                <input type="text" class="input" min="1" max="5" placeholder="Digite o tipo do hotel" id="tipo">
+                <input type="text" class="input" min="1" max="5" placeholder="Classificação(1-5)" id="tipo">
 
                 <button type="button" class="btn" id="button">Enviar</button>
             </section>
