--- a/src/view/map.html
+++ b/src/view/map.html
@@ -9,13 +9,13 @@
     <title>Map</title>
 </head>
 <body>
-        <nav class="navbar navbar-dark bg-primary">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Home<span class="sr-only"></span></a>
-            </li>
-          </ul>
-        </nav>
+    <nav class="navbar navbar-dark bg-primary" id="navStyle">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="./index.html">Home<span class="sr-only"></span></a>
+        </li>
+      </ul>
+    </nav>
 
     <iframe style="background: #21313C;border: none;border-radius: 2px;box-shadow: 0 2px 10px 0 rgba(70, 76, 79, .2);" width="640" height="480" src="https://charts.mongodb.com/charts-project-0-fjhioft/embed/charts?id=cbde66d2-c8b1-48cb-aa4f-4c003ba6eae6&maxDataAge=60&theme=dark&autoRefresh=true">       
     </iframe>
